--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"@types/node": "^12.20.4",
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
+		"firebase": "^8.2.9",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-firebase-hooks": "^3.0.1",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.2.2"
 	},
@@ -32,5 +34,10 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"author": {
+		"name": "mathletedev",
+		"email": "mathletedev@gmail.com"
+	},
+	"license": "MIT"
 }
