--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
 		"@testing-library/react": "^11.2.5",
 		"@testing-library/user-event": "^12.8.1",
 		"@types/jest": "^26.0.20",
-		"@types/node": "^12.20.4",
 		"@types/react": "^17.0.2",
 		"@types/react-dom": "^17.0.1",
 		"firebase": "^8.2.9",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-firebase-hooks": "^3.0.1",
-		"react-scripts": "4.0.3",
-		"typescript": "^4.2.2"
+		"react-scripts": "4.0.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -39,5 +37,9 @@
 		"name": "mathletedev",
 		"email": "mathletedev@gmail.com"
 	},
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"@types/node": "^14.14.32",
+		"typescript": "^4.2.3"
+	}
 }
