--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-firebase-hooks": "^3.0.1",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3"
 	},
 	"scripts": {
@@ -40,6 +41,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^14.14.32",
+		"@types/react-router-dom": "^5.1.7",
 		"typescript": "^4.2.3"
 	}
 }
